--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration Workflow
-'on':
-  workflow_dispatch: null
-  push:
+on:
+  workflow_dispatch:
+  push: 
     branches:
       - '*'
 jobs:
