--- a/.github/workflows/DevBuild.yml
+++ b/.github/workflows/DevBuild.yml
@@ -4,6 +4,9 @@ on:
   push: 
     branches:
       - '*'
+      
+run-name: ${{ github.actor }} is testing out GitHub Actions  🚀
+
 jobs:
   trigger:
     runs-on: ubuntu-latest
@@ -13,7 +16,6 @@ jobs:
         with:
           token: '${{ secrets.REPO_ACCESS_TOKEN }}'
           repository: DeepShahSDET/QA
-          event-type: my-event
-          client-payload: '{"github": ${{ toJson(github) }} }'
+          event-type: Integration-with-Automation
       - name: my-step
-        run: echo "Hello World!"
+        run: echo ${{ github.actor }} Hello !
