add in devloper

--- a/.github/workflows/DevBuild.yml
+++ b/.github/workflows/DevBuild.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration Workflow
-on:
-  workflow_dispatch:
-  push: 
+'on':
+  workflow_dispatch: null
+  push:
     branches:
       - '*'
       
@@ -14,8 +14,8 @@ jobs:
       - name: trigger the automated test in another repo
         uses: peter-evans/repository-dispatch@v3
         with:
-         token: '${{ secrets.REPO_ACCESS_TOKEN }}'
+          token: '${{ secrets.REPO_ACCESS_TOKEN }}'
           repository: DeepShahSDET/QA
           event-type: Integration-with-Automation
       - name: my-step
-        run: echo ${{ github.actor }} Hello !
+        run: 'echo ${{ github.actor }} Hello !'
