--- a/.github/workflows/DevBuild.yml
+++ b/.github/workflows/DevBuild.yml
@@ -14,7 +14,7 @@ jobs:
       - name: trigger the automated test in another repo
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
+          token: '${{ secrets.REPO_ACCESS_TOKEN }}'
           repository: DeepShahSDET/QA
           event-type: Integration-with-Automation
       - name: my-step
